# ez-scheduler

./: .env.example  .gitignore  .pre-commit-config.yaml  BRANCH_PROTECTION_SETUP.md  CLAUDE.md  Dockerfile  README.md  claude_desktop_config_http.json  design-choices.md  docker-compose.yml  handoff.md  prompts.md  pyproject.toml  test_server.py
server/: .dockerignore  .env  .env.example  .env.production  .env.staging  .pre-commit-config.yaml  Dockerfile  README.md  THEME_IMPLEMENTATION_PLAN.md  alembic.ini  docker-compose.yml  docker-test.sh  pyproject.toml  railway.toml
server/alembic/: env.py
server/alembic/versions/: 041ca3de6870_init_db.py  0f812d4c1e45_initial_migration.py  1a0c426a5532_add_button_configuration_fields_to_.py  27f36c4ee198_convert_user_id_to_string_for_auth0.py  32b86e3e1ca5_add_cascade_delete_to_form_fields_.py  57bcb9f61a92_add_form_fields_table_for_custom_form_.py  63aa05c74b2c_convert_field_type_to_proper_enum_type.py  6c4ebf505614_add_field_type_validation_constraints.py  7f62cfa084f2_add_read_only_database_user_for_.py  8c1b0a1c1b6e_replace_is_active_with_status_enum.py  94182d3ada51_make_email_and_phone_optional_in_.py  9a8b7c6d5e4f_timeslot_index_cleanup.py  a1b2c3d4e5f6_limit_button_text_length_to_20.py  af5d721fc214_add_user_model_and_user_id_to_signupform.py  b7e45d12a3f4_add_timeslots_and_time_zone.py  c9c3549085e9_add_index_to_registrations_form_id_for_.py  db918af13044_add_indexes_to_signup_form_url_slug_is_.py  df788cd36e9a_add_registrations_table.py  e1a2b3c4d5e6_unlimited_capacity_timeslots.py  f6a7b8c9d0e1_harden_timeslots_nullable_capacity.py
server/src/ez_scheduler/: __init__.py  config.py  main.py  (+4 more)
server/templates/: success.html
server/tests/: __init__.py  config.py  conftest.py  test_admin_endpoints.py  test_anonymous_form_flow.py  test_basic_mcp_server_connection.py  test_comprehensive_rsvp.py  test_conversation_manager.py  test_create_form.py  test_create_form_complete.py  test_create_form_validation.py  test_custom_fields_workflow.py  test_form_conversation_handler.py  test_form_get_endpoint.py  test_form_state_manager.py  test_form_submission.py  test_gpt_actions.py  test_health_endpoint.py  test_llm_direct.py  test_mcp_archive_form.py  test_mcp_create_timeslot_form.py  test_mcp_publish_form.py  test_mcp_update_form.py  test_mcp_update_timeslots.py  test_postgres_mcp_integration.py  test_registration_form.py  test_registration_service.py  test_rsvp_buttons.py  test_rsvp_functionality.py  test_timeslot_booking.py  test_timeslot_bugs_reproduction.py  test_timeslot_email_notifications.py  test_timeslot_endpoints.py  test_timeslot_mr5.py  test_timeslot_service.py  test_timeslot_update_flow.py  test_user_service.py
(+83 files in other folders)
